--- a/styles/global.css
+++ b/styles/global.css
@@ -16,7 +16,7 @@ body {
 
 #background-image {
     background-color: none;
-    background-image: url("/images/IMG_20251027_160426.jpg") !important;
+    background-image: url("../images/IMG_20251027_160426.jpg") !important;
     background-size: 100% 100% !important;
     background-position: center;
     background-repeat: no-repeat;
